src/test/fun-test/semantic/AssignToValue1.java.err
Semantic error: cannot assign to value, line 5, pos 12
