src/test/fun-test/semantic/AssignToValue1.java
class Main {
    void main() {
        int foo = 5;
        foo = 10;
        10 = foo;
    }
}